--- a/index.html
+++ b/index.html
@@ -5,74 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMS Exam</title>
-    <style>
-        .scroll-banner {
-            width: 100%;
-            height: 60px;
-            overflow: hidden;
-            background-color: antiquewhite;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .scroll-banner p {
-            margin: 0;
-            background: linear-gradient(orange, yellow);
-            text-align: center;
-            font-weight: bold;
-            font-size: 1.2rem;
-            animation: scroll-text 10s 1s ease-in-out infinite alternate;
-        }
-
-        .main-div {
-            width: 60%;
-            margin: 20px auto;
-        }
-
-        .main-div #query {
-            display: block;
-            width: 80%;
-            height: 2rem;
-            border-radius: 20px;
-            margin: 25px auto 0px;
-        }
-
-        #answer {
-            display: block;
-            width: 90%;
-            margin: 0px auto 0px;
-        }
-
-        .footer {
-            border: 2px solid black;
-            height: 50px;
-        }
-
-        @keyframes scroll-text {
-            0% {
-                transform: translateX(0vw);
-            }
-
-            25% {
-                transform: translateX(50vw);
-            }
-
-            50% {
-                transform: translateX(0vw);
-            }
-
-            75% {
-                transform: translateX(-50vw);
-            }
-
-            100% {
-                transform: translateX(0vw);
-            }
-        }
-    </style>
-    <script src="main.js">
-    </script>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </head>
 
 <body>
@@ -84,6 +18,10 @@
     <br>
     <main>
         <div class="main-div">
+            <label id="anima">
+                <input type="checkbox" id="anima-input">
+                animation
+            </label>
             <fieldset id="select-course">
                 <legend>Select Course</legend>
                 <label>
@@ -126,7 +64,16 @@
     </main>
     <footer>
         <div class="footer">
-
+            <fieldset>
+                <legend id="ext">External Links</legend>
+                <ol id="links">
+                    <li><a href="https://chatgpt.com/" target="_blank">CHAT GPT</a></li>
+                    <li><a href="https://chatgpt.com/?temporary-chat=true" target="_blank">CHAT GPT TEMP</a></li>
+                    <li><a href="https://gemini.google.com/app?hl=en-IN" target="_blank">GEMINI</a></li>
+                    <li><a href="https://you.com/" target="_blank">YOU.COM</a></li>
+                    <li><a href="https://www.google.com/" target="_blank">GOOGLE</a></li>
+                </ol>
+            </fieldset>
         </div>
     </footer>
 </body>
